# aqui_db

./: CMakeLists.txt  grammer.txt
includes/client/: command.hpp  exception.hpp  lexer.hpp  parser.hpp  token.hpp
includes/core/: database.hpp  exception.hpp  table.hpp  types.hpp
includes/utils/: helper.hpp  to_string.hpp
src/: main.cpp
src/client/: command.cpp  lexer.cpp  parser.cpp
src/core/: database.cpp  table.cpp  types.cpp
src/def/: keyword.def  token.def
src/utils/: to_string.cpp
